recursion.lessons.recursion.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {
	if (steps!=0) {
		avance(length)
		droite(angle)
		curent(step)
		tree (steps-1, shrink*length, 2*angle, shrink)
	}
}
